[gd_scene load_steps=11 format=1]

[ext_resource path="res://Scripts/player.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Lavi.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/Characters/pepper_sprite.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Sound/footsteps/wdl_footstep_A.wav" type="Sample" id=4]
[ext_resource path="res://Assets/Sound/footsteps/wdl_footstep_B.wav" type="Sample" id=5]
[ext_resource path="res://Assets/Sound/footsteps/wdl_footstep_C.wav" type="Sample" id=6]
[ext_resource path="res://Assets/Sound/footsteps/wdl_footstep_D.wav" type="Sample" id=7]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 35.7814
height = 185.489

[sub_resource type="DynamicFont" id=2]

font/size = 32
font/use_mipmaps = true
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="SampleLibrary" id=3]

samples/wdl_footstep_1 = { "db":0.0, "pitch":1.0, "sample":ExtResource( 4 ) }
samples/wdl_footstep_2 = { "db":0.0, "pitch":1.0, "sample":ExtResource( 5 ) }
samples/wdl_footstep_3 = { "db":0.0, "pitch":1.0, "sample":ExtResource( 6 ) }
samples/wdl_footstep_4 = { "db":0.0, "pitch":1.0, "sample":ExtResource( 7 ) }

[node name="PlayerObject" type="Node2D"]

[node name="Player" type="KinematicBody2D" parent="."]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -3.44012, 12.5274 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]

transform/pos = Vector2( -3.44012, 12.5274 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="PlayerDebug" type="CanvasLayer" parent="Player"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="DebugLabel" type="Label" parent="Player/PlayerDebug"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 14.0
custom_fonts/font = SubResource( 2 )
text = "pl"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Camera2D" type="Camera2D" parent="Player"]

process/pause_mode = 2
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = true
smoothing/speed = 2.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="Sprite" type="Node2D" parent="Player"]

editor/display_folded = true

[node name="PepperSprite" parent="Player/Sprite" instance=ExtResource( 3 )]

[node name="SamplePlayer" type="SamplePlayer" parent="Player"]

config/polyphony = 3
config/samples = SubResource( 3 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="DialoguePosition" type="Node2D" parent="Player"]

editor/display_folded = true
transform/pos = Vector2( 97, -50 )

[node name="Bubble" parent="Player/DialoguePosition" instance_placeholder="res://Scenes/Dialogs/dialog_bubble.tscn"]


